# zhi_llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
colabs/: [Canonical]_Use_zhi_llm_module.ipynb
models/: layer_norm.py
src/models/: gelu.py  gpt2.py  gpt2_test.py  layer_norm.py  rope_emb.py  rope_emb_test.py
